gccida/c3/decode_reg_name
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/decode_reg_name/src/varasm.c:1237:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[v3] & 4) == 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/decode_reg_name/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/decode_reg_name/src/varasm.c:1271:24: error: use of undeclared identifier 'off_73A990'
else if ( !strcmp( v1, off_73A990) ) 
                       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/decode_reg_name/src/varasm.c:1275:25: error: use of undeclared identifier 'off_73A990'
else if ( !strcmp( v1, &off_73A990[4]) ) 
                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/decode_reg_name/src/varasm.c:1279:24: error: use of undeclared identifier 'off_73A998'
else if ( !strcmp( v1, off_73A998) ) 
                       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/decode_reg_name/src/varasm.c:1287:25: error: use of undeclared identifier 'off_73A998'
else if ( !strcmp( v1, &off_73A998[4]) ) 
                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/decode_reg_name/src/varasm.c:1303:24: error: use of undeclared identifier 'off_70CC2B'
else if ( !strcmp( v1, off_70CC2B) ) 
                       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/decode_reg_name/src/varasm.c:1307:24: error: use of undeclared identifier 'off_70B70B'
else if ( !strcmp( v1, off_70B70B) ) 
                       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/decode_reg_name/src/varasm.c:1311:24: error: use of undeclared identifier 'off_73A9AC'
else if ( !strcmp( v1, off_73A9AC) ) 
                       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/decode_reg_name/src/varasm.c:1315:24: error: use of undeclared identifier 'off_73A9B0'
else if ( !strcmp( v1, off_73A9B0) ) 
                       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/decode_reg_name/src/varasm.c:1335:40: error: use of undeclared identifier 'off_695638'
else if ( !strcmp( v1, ( const char *)&off_695638 + 4) ) 
                                       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/decode_reg_name/src/varasm.c:1339:40: error: use of undeclared identifier 'off_695638'
else if ( !strcmp( v1, ( const char *)&off_695638 + 7) ) 
                                       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/decode_reg_name/src/varasm.c:1391:15: error: use of undeclared identifier 'decode_reg_name_table'
LODWORD( i) = decode_reg_name_table[v8].number; 
              ^
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/decode_reg_name/src/obj/varasm.o] Error 1
